--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,3 +1,90 @@
-h1 {
-    color: green;
+/*reset */
+html {
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul,
+menu {
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
+}
+
+table {
+    border: none;
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+th,
+td {
+    text-align: initial;
+}
+
+/*reset end*/
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 40vw;
+}
+
+
+.spacer-v-8 {
+    height: 8px;
+}
+
+.spacer-v-24 {
+    height: 24px;
+}
+
+.spacer-h-8 {
+    width: 8px;
+}
+
+.form-group-vertical {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.form-group-horizontal {
+    display: flex;
+    /* flex-direction: column; */
+    width: 100%;
+    justify-content: space-around;
+}
+
+button {
+    flex-grow: 0.8;
+}
+
+.input-label {
+    font-weight: bold;
 }
