--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -13,9 +13,9 @@
         </div>
         <div class="spacer-v-8"></div>
         <div class="form-group-horizontal">
-            <button type="submit">Login</button>
+            <button class="form-btn" type="submit">Login</button>
             <div class="spacer-h-8"></div>
-            <button type="submit" formaction="/register">Register</button>
+            <button class="form-btn" type="submit" formaction="/register">Register</button>
         </div>
     </form>
 </div>
