--- a/src/views/chatRoom.handlebars
+++ b/src/views/chatRoom.handlebars
@@ -10,35 +10,38 @@
 </head>
 
 <body>
-    {{!-- nav bar --}}
-    <header class="chat-header">
-        <div>FSE Chat Room</div>
-        <form action="/logout" , method="post">
-            <input type="submit" value="Logout" />
+    <div class="chat-container">
+        {{!-- nav bar --}}
+        <header class="chat-header">
+            <div>FSE Chat Room</div>
+            <form action="/logout" , method="post">
+                <input type="submit" value="Logout" />
+            </form>
+        </header>
+        {{!-- scrollable chat section --}}
+        <section class="chat-box scrollable">
+            {{!-- message box --}}
+            <div class="message-box">
+                <div class="message-header">
+                    <div class="message-name">Johnny</div>
+                    <div class="message-timestamp">06.06.2023 9:53PM</div>
+                </div>
+                <div class="spacer-v-4"></div>
+                <p class="message-content">Hello world</p>
+            </div>
+        </section>
+        {{!-- input and submit form --}}
+        <form id="chat-form" action="/message" method="post">
+            <div class="form-group-vertical">
+                <textarea class="message-input" form="chat-form" name="message"></textarea>
+                <div class="spacer-v-8"></div>
+                <div class="chat-footer">
+                    <button type="submit">Post</button>
+                </div>
+            </div>
         </form>
-    </header>
-    {{!-- scrollable chat section --}}
-    <section class="chat-box scrollable">
-        {{!-- message box --}}
-        <div class="message-box">
-            <div class="message-header">
-                <div class="message-name">Johnny</div>
-                <div class="message-timestamp">06.06.2023 9:53PM</div>
-            </div>
-            <div class="spacer-v-4"></div>
-            <p class="message-content">Hello world</p>
-        </div>
-    </section>
-    {{!-- input and submit form --}}
-    <form id="chat-form" action="/message" method="post">
-        <div class="form-group-vertical">
-            <textarea class="message-input" form="chat-form" name="message"></textarea>
-            <div class="spacer-v-8"></div>
-            <div class="chat-footer">
-                <button type="submit">Post</button>
-            </div>
-        </div>
-    </form>
+
+    </div>
 
 </body>
 
