feat: add error handling

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -51,6 +51,10 @@ td {
     max-width: 300px;
 }
 
+.error-message {
+    color: red;
+}
+
 .form-container {
     display: flex;
     flex-direction: column;
