--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -2,6 +2,9 @@
     {{#if error}}
     <p class="error-message">{{error}}</p>
     {{/if}}
+    {{#if registerSuccess}}
+    <p class="success-message">{{registerSuccess}}</p>
+    {{/if}}
     <h1>FSE Chat Room</h1>
     <div class="spacer-v-24"></div>
     <form class="form-container" action="/user/login" method="post">
