--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -5,7 +5,7 @@
     {{#if registerSuccess}}
     <p class="success-message">{{registerSuccess}}</p>
     {{/if}}
-    <h1>FSE Chat Room</h1>
+    <h1 class="index-title">FSE Chat Room</h1>
     <div class="spacer-v-24"></div>
     <form class="form-container" action="/user/login" method="post">
         <div class="form-group-vertical">
@@ -17,7 +17,7 @@
             <label class="input-label">Password</label>
             <input type="password" name="password" required>
         </div>
-        <div class="spacer-v-8"></div>
+        <div class="spacer-v-16"></div>
         <div class="form-group-horizontal">
             <button class="form-btn" type="submit">Login</button>
             <div class="spacer-h-8"></div>
